unpackaged/main/default/objects/Tech_Hexalis_Order_Import__c/Tech_Hexalis_Order_Import__c.object-meta.xml
<CustomObject>
    <label>Tech Hexalis Order Import</label>
    <nameField>
        <label>Tech Hexalis Order Import Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tech Hexalis Order Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>