unpackaged/main/default/objects/Tech_Hexalis_Order_Import__c/fields/Code_Dossier__c.field-meta.xml
<CustomField>
    <fullName>Code_Dossier__c</fullName>
    <label>Code Dossier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>