unpackaged/main/default/objects/Tech_Hexalis_Order_Import__c/fields/Code_Examen__c.field-meta.xml
<CustomField>
    <fullName>Code_Examen__c</fullName>
    <label>Code Examen</label>
    <length>10</length>
    <type>Text</type>
</CustomField>