unpackaged/main/default/objects/Tech_Hexalis_Order_Import__c/fields/Tech_Key__c.field-meta.xml
<CustomField>
    <fullName>Tech_Key__c</fullName>
    <externalId>true</externalId>
    <label>Tech_Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>